--- a/src/chat.css
+++ b/src/chat.css
@@ -1,7 +1,7 @@
-header {
-    background-color: aquamarine;
+.headerChat {
+    background-color: rgb(243, 245, 94);
     text-align: center;
-    
+    font-size: 20px;
 }
 .titleChatBox {
     margin-bottom: 10px;
@@ -15,22 +15,25 @@ header {
     height: 100px;
     overflow: scroll;
 }
-.msgUseradded{
-    background-color: green;
-    border-radius: 10%;
-    font-size: small;
-    font-weight: bold;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 3px;
+
+.messageInout{
+    margin-left: 5px;
 }
 
-/*input:invalid {
-    border: 1px solid red;
-  }
-  
-input:valid {
-    border: 1px solid black;
-}*/
+.messageInput{
+    padding-right: 100px;
+    margin-left: 10px;
+}
 
+.messageButton{
+    font-weight: bold;
+    border:solid 2px;
+    border-radius: 20%;
+    padding-top: 2px;
+    margin-left: 10px;
+}
+
+.messageButton:hover{
+    background-color: rgb(242, 245, 66);
+}
 
